fix overflow issue

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,6 @@ p {
   height: 100vh;
   padding: 50px 50px 50px 50px;
   animation: animate 20s linear infinite;
-  overflow: hidden;
 }
 
 /* @keyframes animate {
